--- a/src/component/cloth.css
+++ b/src/component/cloth.css
@@ -42,3 +42,16 @@ button {
 .cloth:hover {
   box-shadow: 10px 10px 20px #ccc;
 }
+
+@media (max-width: 480px) {
+  .cloth {
+    display: flex;
+    height: 380px;
+    width: 340px;
+  }
+  .cloth img {
+    width: 90%;
+    height: 60%;
+    margin-top: 10px;
+  }
+}
