--- a/src/component/contact.css
+++ b/src/component/contact.css
@@ -18,3 +18,56 @@
   justify-content: space-between;
   margin-top: 20px;
 }
+
+@media (max-width: 480px) {
+  .contact-head {
+    display: flex;
+    flex-direction: column;
+  }
+  .contact-phone {
+    height: 300px;
+    width: 250px;
+    box-shadow: 5px 5px 10px #ccc;
+    text-align: center;
+    border-radius: 38px;
+    margin-top: 20px;
+  }
+  .span-phone {
+    margin-left: 80px;
+  }
+  .contact-add {
+    height: 300px;
+    width: 250px;
+    box-shadow: 5px 5px 10px #ccc;
+    text-align: center;
+    border-radius: 38px;
+    margin-top: 20px;
+    margin-left: 90px;
+  }
+  .contact-mail {
+    height: 300px;
+    width: 250px;
+    box-shadow: 5px 5px 10px #ccc;
+    text-align: center;
+    border-radius: 38px;
+    margin-top: 20px;
+    margin-left: 90px;
+  }
+  .span-mail {
+    margin-left: 90px;
+  }
+  .span-mail h2,
+  .span-mail p {
+    margin-right: 30px;
+  }
+
+  .contact-phone:hover {
+    box-shadow: 10px 10px 20px #ccc;
+  }
+  .contact-add:hover {
+    box-shadow: 10px 10px 20px #ccc;
+  }
+  .contact-mail:hover {
+    box-shadow: 10px 10px 20px #ccc;
+  }
+}
