--- a/src/component/header.css
+++ b/src/component/header.css
@@ -18,3 +18,12 @@
   margin-top: -25px;
   cursor: pointer;
 }
+
+@media (max-width: 480px) {
+  .mail {
+    display: none;
+  }
+  .media {
+    display: none;
+  }
+}
