--- a/src/component/login.css
+++ b/src/component/login.css
@@ -41,3 +41,10 @@ input {
   color: white;
   background: rgb(18, 20, 26);
 }
+
+@media (max-width: 480px) {
+  .container {
+    height: 450px;
+    width: 350px;
+  }
+}
