--- a/src/component/section.css
+++ b/src/component/section.css
@@ -4,7 +4,6 @@
   height: 350px;
   background-image: url("./background2.jpg");
   background-repeat: no-repeat;
-  background-position: 60px;
   background-size: cover;
   color: #fff;
   text-align: center;
@@ -37,4 +36,27 @@ input[type="email"] {
 .section-h1 {
   font-weight: 700;
   margin-bottom: 0;
+}
+
+@media (max-width: 480px) {
+  .section-h1 {
+    font-size: 25px;
+    font-weight: 700;
+  }
+  .section-p {
+    font-weight: 600;
+    color: #123;
+  }
+  input[type="email"] {
+    width: 80%;
+  }
+  .section-btn {
+    width: 50%;
+  }
+  .section {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-left: 0;
+  }
 }
