--- a/src/component/shoe.css
+++ b/src/component/shoe.css
@@ -42,3 +42,15 @@ button {
 .shoe:hover {
   box-shadow: 10px 10px 20px #ccc;
 }
+@media (max-width: 480px) {
+  .shoe {
+    display: flex;
+    height: 380px;
+    width: 340px;
+  }
+  .shoe img {
+    width: 90%;
+    height: 60%;
+    margin-top: 10px;
+  }
+}
