--- a/src/component/showcart.css
+++ b/src/component/showcart.css
@@ -33,3 +33,19 @@
   overflow: scroll;
   overflow-x: hidden;
 }
+
+@media (max-width: 480px) {
+  .total-price {
+    text-align: right;
+    margin-right: 5px;
+  }
+  .cartItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  .btn {
+    margin-top: 20px;
+  }
+}
