--- a/src/component/subHeader.css
+++ b/src/component/subHeader.css
@@ -51,3 +51,39 @@ input[type="button"] {
   font-size: 16px;
   font-weight: 600;
 }
+
+@media (max-width: 480px) {
+  .subHeader {
+    display: block;
+    width: 60%;
+    position: relative;
+  }
+  .sub-img {
+    margin-left: -70px;
+    margin-top: -10px;
+  }
+  .input {
+    display: block;
+    position: relative;
+    width: 100%;
+  }
+  input[type="text"] {
+    width: 100%;
+  }
+  input[type="button"] {
+    position: absolute;
+    left: 241px;
+    top: 0;
+  }
+  .sub-cart {
+    position: absolute;
+    top: 20px;
+    left: 300px;
+    height: 30px;
+  }
+  .sub-cart span {
+    position: absolute;
+    bottom: 28px;
+    left: 25px;
+  }
+}
