--- a/src/component/showcart.css
+++ b/src/component/showcart.css
@@ -6,8 +6,21 @@
   padding: 20px;
   font-size: 20px;
   font-weight: bold;
+  margin-right: 25px;
   background: #2f3c7e;
   color: #fbeaeb;
+  margin-top: 5px;
+}
+.empty {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 30px;
+}
+.cartItem img {
+  height: 100px;
+  width: 100px;
+  border-radius: 10px;
+  margin-left: 20px;
 }
 .cart-actions {
   color: white;
