--- a/src/component/login.css
+++ b/src/component/login.css
@@ -1,4 +1,4 @@
-.container {
+/*.container {
   height: 500px;
   width: 500px;
   background: rgb(0, 90, 10);
@@ -48,3 +48,4 @@ input {
     width: 350px;
   }
 }
+*/
