--- a/src/component/Payment/payment.css
+++ b/src/component/Payment/payment.css
@@ -18,7 +18,11 @@
   border-radius: 2px;
   border: 2px solid #00ff20;
 }
-
+.payment_form button {
+  background-color: rgb(0, 210, 10);
+  color: #fff;
+  font-weight: 800;
+}
 @media (max-width: 480px) {
   .payment_container {
     width: 21rem;
